# BioReasoningChallenge

./: .gitignore  README.md  kaggle_data_description.md  kaggle_metric.py  kaggle_metric_track_a.py  kaggle_metric_track_b.py  kaggle_metric_track_c.py  pyproject.toml
data/: sample_submission.csv  sample_submission_track_a.csv  sample_submission_track_b.csv  sample_submission_track_c.csv  test.csv  train.csv
docs/: index.html
examples/: b_system_prompt.txt  example_prompts.csv  finetune.py  prompt_template.txt  track_a_prompt_only.py  track_b_agentic.py  track_c_finetune.py
mlgenx/: parsing.py  prompts.py
outputs/track_a/custom_template/: prompt.txt  responses_cache.json  submission.csv
outputs/track_a/default/: prompt.txt  responses_cache.json  submission.csv
outputs/track_a/specific_prompts/: prompt.txt  responses_cache.json  submission.csv
outputs/track_a/template_specific_prompts/: responses_cache.json  submission.csv
outputs/track_b/default/: prompt.txt
outputs/track_b/default/tools/: train_data_lookup.py
outputs/track_c/: prompt.txt  responses_cache.json  submission.csv
