[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlgenx"
version = "0.1.0"
description = "Helper package for the MLGenX PerturbPair competition"
dependencies = [
    "pandas",
    "numpy",
    "openai>=2.24.0",
    "dspy>=3.1.3",
]

[tool.setuptools]
packages = ["mlgenx"]
